[tool.poetry]
name = "kittyfinder"
version = "0.1.0"
description = ""
authors = ["James Saxon <james@saxon.com>"]
readme = "README.md"

[tool.poetry.scripts]
kfind = "scripts.kfind:main"


[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
types-beautifulsoup4 = "^4.12.0.5"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
